@@ -1,3 +1,10 @@
+[B]Version 1.7.31[/B]
+
+- Updated: youporn
+- Fixed: video regex
+- Fixed: catcher
+
+
 [B]Version 1.7.30[/B]
 
 - Updated: eporner
